# Rusted-Linux

./: .gitignore  .gitmodules  README.md  makefile
.cargo/: config.toml
distro/: kernel-config
scripts/: install-deps.sh
systemd/: rusted-console-setup.service  rusted-vt-manager.service
user-space/: Cargo.toml
user-space/vt-core/: Cargo.toml
user-space/vt-core/src/: console.rs  error.rs  font.rs  keymap.rs  lib.rs  notify.rs  vt.rs
user-space/vt-manager/: Cargo.toml
user-space/vt-manager/src/: main.rs
user-space/vt-tools/: Cargo.toml
